PlaceDataModel PlaceViewController (editing places and adding new places) Transferring data between MainViewController and PlaceViewController Deleting and moving cells in MainViewController

--- a/FavPlaces/Info.plist
+++ b/FavPlaces/Info.plist
@@ -60,5 +60,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) wants to take pictures</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) wants to use your photos</string>
 </dict>
 </plist>
